--- a/DebouncFunction/Base.lproj/Main.storyboard
+++ b/DebouncFunction/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DebouncFunction" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,7 +20,51 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qbM-1I-0rH">
+                                <rect key="frame" x="125" y="129" width="125" height="30"/>
+                                <state key="normal" title="Start auto 100000"/>
+                                <connections>
+                                    <action selector="start:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sOi-K0-Djj"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ic-YZ-q3I">
+                                <rect key="frame" x="155" y="204" width="64" height="30"/>
+                                <state key="normal" title="Calculate"/>
+                                <connections>
+                                    <action selector="calculate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dbq-ve-ZMh"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="igE-UY-CqV">
+                                <rect key="frame" x="138" y="278" width="99" height="30"/>
+                                <state key="normal" title="Start manually"/>
+                                <connections>
+                                    <action selector="startManually:" destination="BYZ-38-t0r" eventType="touchUpInside" id="30y-Yz-si1"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="tBb-3W-ugI">
+                                <rect key="frame" x="123" y="343" width="128" height="31"/>
+                                <subviews>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UjX-AP-jXX" customClass="DebouncedSwitch" customModule="DebouncFunction" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
+                                    </switch>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U7A-Q6-9Tp" customClass="DebouncedSwitch" customModule="DebouncFunction" customModuleProvider="target">
+                                        <rect key="frame" x="79" y="0.0" width="51" height="31"/>
+                                    </switch>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="qbM-1I-0rH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0mZ-CL-nGV"/>
+                            <constraint firstItem="qbM-1I-0rH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="109" id="7oy-Vg-bWK"/>
+                            <constraint firstItem="igE-UY-CqV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AgL-bA-pku"/>
+                            <constraint firstItem="tBb-3W-ugI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HPn-Qr-hgZ"/>
+                            <constraint firstItem="igE-UY-CqV" firstAttribute="top" secondItem="8Ic-YZ-q3I" secondAttribute="bottom" constant="44" id="PUK-QQ-wyp"/>
+                            <constraint firstItem="8Ic-YZ-q3I" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WR9-hO-CJJ"/>
+                            <constraint firstItem="8Ic-YZ-q3I" firstAttribute="top" secondItem="qbM-1I-0rH" secondAttribute="bottom" constant="45" id="XTs-fI-w9T"/>
+                            <constraint firstItem="tBb-3W-ugI" firstAttribute="top" secondItem="igE-UY-CqV" secondAttribute="bottom" constant="35" id="YPv-8C-0QY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
